--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button onclick="loadUsers()">Load Users</button>
     <button onclick="loadPosts()">Load Posts</button>
     <script src="js/api.js"></script>
-    <script src="js/json.js"></script>
+    <!-- <script src="js/json.js"></script> -->
 </body>
 
 </html>
