--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-    
-    
 
-    <script src="main.js" ></script>
+    <button onclick="loadData()">data load</button>
+
+    <script src="api.js" ></script>
 </body>
 </html>
