added display data

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 
     <button onclick="loadData()">data load</button>
+    <button onclick="loadUser()" >load user</button>
+
+    <ul id="users">
+        
+    </ul>
 
     <script src="api.js" ></script>
 </body>
